# WoWRealmStatusCLI

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: battlenet_api.rs  browser_auth.rs  colors.rs  config.rs  main.rs
