[package]
name    = "wow-realm-status-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap            = { version = "4", features = ["derive"] }
dotenv          = "0.15"
headless_chrome = "1.0"
reqwest         = { version = "0.12", features = ["blocking", "json"] }
rpassword       = "7"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

[profile.release]
opt-level = 3
lto       = true
